# example-editor

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: editor_benchmarks.rs
config/: README.md  editor.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  PLUGINS.md
docs/examples/: config.toml
editor-core/: Cargo.toml
editor-core/src/: editor.rs  lib.rs
editor-core/src/buffer/: mod.rs
editor-core/src/document/: mod.rs
editor-core/src/event/: mod.rs
editor-core/src/text/: mod.rs
editor-lsp/: Cargo.toml
editor-lsp/src/: client.rs  config.rs  error.rs  lib.rs  server.rs  types.rs
editor-plugin/: Cargo.toml
editor-plugin/src/: lib.rs  loader.rs  manager.rs  native.rs  registry.rs  sandbox.rs  wasm.rs
editor-plugin/src/testing/: harness.rs  mock.rs  mod.rs
editor-syntax/: Cargo.toml
editor-syntax/src/: highlighter.rs  language.rs  lib.rs  parser.rs  theme.rs
editor-ui/: Cargo.toml
editor-ui/src/: app.rs  editor.rs  lib.rs  theme.rs
editor-ui/src/widgets/: command_palette.rs  file_explorer.rs  minimap.rs  mod.rs  status_line.rs  tab_bar.rs
examples/plugins/file-stats/: Cargo.toml  README.md  plugin.json
examples/plugins/file-stats/src/: lib.rs
examples/plugins/hello-world/: Cargo.toml  README.md  plugin.json
examples/plugins/hello-world/src/: lib.rs
examples/plugins/word-count/: Cargo.toml  README.md  plugin.json
examples/plugins/word-count/src/: lib.rs
rust-editor/: Cargo.toml  build.rs
rust-editor/src/: main.rs
scripts/: build.sh  dev.sh  install.sh  release.sh  run-tests.sh
src/: main.rs
src/buffer/: history.rs  markers.rs  mod.rs  operations.rs  rope.rs
src/event/: dispatcher.rs  handler.rs  mod.rs  queue.rs
src/input/: commands.rs  keybinding.rs  keymap.rs  mod.rs
src/state/: config.rs  mod.rs  preferences.rs  session.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/integration/: editor_test.rs
