[workspace]
resolver = "2"
members = [
    "editor-core",
    "editor-ui",
    "editor-lsp",
    "editor-plugin",
    "editor-syntax",
    "rust-editor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yeferson Toloza <yeferson.toloza@example.com>"]
license = "MIT"
repository = "https://github.com/yefersontoloza/rust-editor"
description = "A modern text editor written in Rust"
keywords = ["editor", "text-editor", "rust"]

[workspace.dependencies]
# GUI Framework
egui = "0.23"
eframe = "0.23"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text handling
ropey = "1.6"

# Utility
parking_lot = "0.12"
log = "0.4"
env_logger = "0.10"
tempfile = "3.8"

# LSP Support
tower-lsp = "0.20"
lsp-types = "0.95.0"

# Syntax Highlighting
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"

# Theme detection
dark-light = "1.0"

# Concurrency utilities
lazy_static = "1.4"

# WASM support
wasmer = "4.2"
wasmer-compiler = "4.2"
wasmer-compiler-cranelift = "4.2"
wasmer-types = "4.2"

# Resource limits
rlimit = "0.9"
