[package]
name = "editor-core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core text editing engine for rust-editor"
license = "MIT"

[dependencies]
# Text manipulation
ropey = "1.6"

# Async runtime
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utility
parking_lot = "0.12"
log = "0.4"
rayon = "1.8"

[dev-dependencies]
env_logger = "0.11"
tempfile = "3.8"
