[package]
name = "editor-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Language Server Protocol support for rust-editor"
repository = "https://github.com/yefersontoloza/rust-editor"

[dependencies]
# Local dependencies
editor-core = { path = "../editor-core" }
editor-syntax = { path = "../editor-syntax" }

# LSP implementation
tower-lsp = "0.20.0"
tower-service = "0.3.2"
lsp-types = "0.97"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = { workspace = true }
async-trait = "0.1"

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Concurrency
parking_lot = { workspace = true }
lazy_static = { workspace = true }

# URL parsing
url = "2.3"

[dev-dependencies]
env_logger = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
