[package]
name = "editor-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
editor-core = { path = "../editor-core" }
editor-syntax = { path = "../editor-syntax" }

egui = { workspace = true }
eframe = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
dark-light = { workspace = true }
rfd = "0.15.3"

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
