[package]
name = "rust-editor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
editor-core = { path = "../editor-core" }
editor-ui = { path = "../editor-ui" }

tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

[dependencies.clap]
version = "4.4"
features = ["derive"]

[build-dependencies]
built = "0.7"
