[package]
name = "file-stats-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "File statistics plugin for Rust Editor"

[lib]
crate-type = ["cdylib"]

[dependencies]
editor-plugin = { path = "../../../editor-plugin" }
editor-ui = { path = "../../../editor-ui" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1.0", features = ["fs", "io-util"] }
walkdir = "2.4"
