[package]
name = "hello-world-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Example plugin for Rust Editor"

[lib]
crate-type = ["cdylib"]

[dependencies]
editor-plugin = { path = "../../../editor-plugin" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
